style: fix background color on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,4 +6,6 @@ body {
    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
       sans-serif;
+
+   @apply bg-orange-50 dark:bg-stone-800 transition-colors ease-linear text-stone-900 dark:text-orange-50;
 }
